# nexterm

./: CMakeLists.txt  README.md
src/: ai.cpp  ai.h  config.cpp  config.h  main.cpp  statusbar.cpp  statusbar.h  terminal.cpp  terminal.h
