cmake_minimum_required(VERSION 3.16)
project(nexterm VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED gtk4)
pkg_check_modules(VTE REQUIRED vte-2.91-gtk4)
pkg_check_modules(CURL REQUIRED libcurl)
include_directories(${GTK4_INCLUDE_DIRS} ${VTE_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} src/)
link_directories(${GTK4_LIBRARY_DIRS} ${VTE_LIBRARY_DIRS} ${CURL_LIBRARY_DIRS})
add_executable(nexterm src/main.cpp src/terminal.cpp src/statusbar.cpp src/ai.cpp src/config.cpp)
target_link_libraries(nexterm ${GTK4_LIBRARIES} ${VTE_LIBRARIES} ${CURL_LIBRARIES})
target_compile_options(nexterm PRIVATE ${GTK4_CFLAGS_OTHER} ${VTE_CFLAGS_OTHER})
